# Parallel-Convolution-Filters

./: .gitignore  CMakeLists.txt  Layout_AoS_Convolution.cpp  Layout_SoA_Convolution.cpp  README.md  analysis_experiments.py  benchmark.cpp  main.cu  report_hw_finito.nsys-rep  requirements.txt
experiments_results/: performance_dim_block.csv  performance_layout.csv  performance_layout_NTiled.csv  performance_layout_Tiled.csv  performance_layout_seq.csv  performance_tiling.csv  sequential_kernel_study.csv
reports/: report_hw_finito_without_tiled.nsys-rep
